# Tanin

./: .gitignore  ADDING_SOUNDS.md  Cargo.toml  LICENSE  README.md
assets/: sounds.toml
src/: app.rs  audio.rs  config.rs  main.rs  presets.rs  session.rs  static_data.rs  ui.rs
src/app/: audio.rs  download.rs  input.rs  navigation.rs  presets.rs
src/ui/: download.rs  footer.rs  header.rs  help.rs  main_view.rs  presets.rs
